fix(symbols): stretch tables to fill questions column

--- a/Content/Styles/Symbols/Site.scss
+++ b/Content/Styles/Symbols/Site.scss
@@ -111,7 +111,8 @@ html, body {
 }
 
 .answerContainer {
-  margin: 50px;
+  margin: 10px;
+  margin-left: 0;
 }
 
 .tableItem{
